# fast-api-oauth

./: .env  .gitignore  .test.env  README.md  alembic.ini  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  run_init_db.py
oauth_app/: main.py
oauth_app/alembic/: env.py
oauth_app/alembic/versions/: 1dbf001035f3_added_superuser_column.py  4f70f9bdc5f5_first_revision.py  c56206318903_removed_username.py
oauth_app/app/: crud.py  deps.py  models.py  schemas.py  security.py
oauth_app/app/database/: base.py  init_db.py  session.py
tests/: conftest.py  test_api.py  utils.py
tests/docker_services/: postgres.py
